# observer

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REPRODUCIBILITY.md  RESEARCH.md  RESEARCH_CONTROLLER.md  models.json  pyproject.toml  requirements-optional.txt  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
adaptive_controller/: adaptive_loop.py  adaptive_runner.py  dashboard.py
baseline_hysteresis/: __init__.py  cache.py  frames.py  hooks.py  metrics.py  model_loader.py  models.json  plotter.py  runner.py  utils.py
docs/: RESEARCH_WORKFLOW.md  observer_paper.html
intervention_engine/: __init__.py  backend.py  cache.py  diagnostics_bridge.py  intervention.py  model_loader.py  sae_adapter.py  trajectory.py  utils.py
scripts/: analyze_branchpoints.py  observer_console.py  observer_daemon.py  runtime_lab_dashboard.py
scripts/observer_console/: app.js  index.html  styles.css
scripts/runtime_lab_dashboard/: app.js  index.html  runs.html  styles.css
src/runtime_lab/: __init__.py
src/runtime_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/runtime_lab/cli/: _common.py  _sweep.py  control.py  hysteresis.py  main.py  observe.py  stress.py
src/runtime_lab/config/: __init__.py  defaults.py  schemas.py
src/runtime_lab/control/: __init__.py  adaptive_runner.py  controller.py  dashboard.py  policy.py
src/runtime_lab/core/: __init__.py  advisory.py  sampling.py
src/runtime_lab/hysteresis/: __init__.py  runner.py
src/runtime_lab/observe/: __init__.py  runner.py
(+31 files in other folders)
