[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runtime-lab"
version = "0.1.0"
description = "Observer runtime observability, intervention, and control toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.4.0",
  "numpy>=1.26",
  "transformers>=4.45",
]

[project.optional-dependencies]
viz = [
  "matplotlib",
  "plotly>=5.24",
  "pandas>=2.2",
]
nnsight = [
  "nnsight>=0.5.15",
]
sae = [
  "sae-lens>=0.5.15",
]
research = [
  "sae-lens>=0.5.15",
  "nnsight>=0.5.15",
  "pandas>=2.2",
  "plotly>=5.24",
]

[project.scripts]
runtime-lab = "runtime_lab.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
